--- a/WebApplication2/WebApplication2/Views/Bank/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/Bank/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewBranchForm 
+﻿@model NewBranchForm
 @{
     Layout = null;
 }
@@ -18,8 +18,8 @@
 
         .container {
             max-width: 500px;
-            margin: 0 auto;
-            padding: 20px;
+            margin: 50px auto;
+            padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
             background-color: #ffffff;
@@ -27,7 +27,8 @@
 
         h2 {
             text-align: center;
-            color: #007bff;
+            color: #28a745;
+            margin-bottom: 40px; 
         }
 
         label {
@@ -39,18 +40,18 @@
         }
 
         .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
+            background-color: #28a745;
+            border-color: #28a745;
         }
 
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #0056b3;
-        }
+            .btn-primary:hover {
+                background-color: #28a745;
+                border-color: #28a745;
+            }
 
-        .btn-primary:focus {
-            box-shadow: none;
-        }
+            .btn-primary:focus {
+                box-shadow: none;
+            }
     </style>
 </head>
 <body>
