--- a/WebApplication2/WebApplication2/Views/_ViewImports.cshtml
+++ b/WebApplication2/WebApplication2/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebApplication2
 @using WebApplication2.Models
+@using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
